--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://syedzayyan.com"
+base_url = "https://syedzayyan.github.io/shadharon"
 title = "Heisenberg"
 description = "Walter is kind, caring and timid, but also demanding, calculating, and ruthless. His invented pseudonym, Heisenberg, becomes an alter ego – a fantasy for him to live out a love of power. Beneath both sides of his dual personality, he views the world in the rarefied scientific terms of chemistry."
 
