--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
+#The nexessary stuff/decessary stuff
+
 base_url = "https://syedzayyan.github.io/shadharon"
 title = "Heisenberg"
 description = "Walter is kind, caring and timid, but also demanding, calculating, and ruthless. His invented pseudonym, Heisenberg, becomes an alter ego – a fantasy for him to live out a love of power. Beneath both sides of his dual personality, he views the world in the rarefied scientific terms of chemistry."
-
 generate_feed = true
 compile_sass = true
 minify_html = true
@@ -17,13 +18,18 @@ highlight_theme = "ayu-dark"
 [extra]
 toc = true
 use_cdn = false
+
+#Full path after the base URL required. So if you were to place it in "static" it would be "/favicon.ico"
 favicon = ""
+
+#This header image is used for SEO. For example if you were to share an image via Messenger/Instagram/Twitter a preview picture is also presented
 headerImage = ""
 
+# The icon is display besides the menu text but is not necessary. It needs to be placed under "menu_icon" in the static "folder"
 menu = [
     { name = "Projects", url = "/projects", weight = 1, icon = "projects.png" },
 ]
-
+#The icons available can be found in "social_icons" in the "static" folder
 socials = [
     { name = "github", url = "https://github.com/syedzayyan/", icon = "github" },
 ]
