--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 #The nexessary stuff/decessary stuff
 
-base_url = "https://syedzayyan.github.io/shadharon"
+base_url = "https://shadharon.syedzayyan.com"
 title = "Heisenberg"
 description = "Walter is kind, caring and timid, but also demanding, calculating, and ruthless. His invented pseudonym, Heisenberg, becomes an alter ego – a fantasy for him to live out a love of power. Beneath both sides of his dual personality, he views the world in the rarefied scientific terms of chemistry."
 generate_feed = true
