--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,8 @@ generate_feed = true
 compile_sass = true
 minify_html = true
 
+build_search_index = true
+
 taxonomies = [
     {name = "tags", feed = true},
 ]
@@ -18,6 +20,7 @@ highlight_theme = "css"
 [extra]
 toc = true
 use_cdn = false
+search_bar = false
 
 #Full path after the base URL required. So if you were to place it in "static" it would be "/favicon.ico"
 favicon = ""
